--- a/backend/package.json
+++ b/backend/package.json
@@ -3,6 +3,14 @@
   "version": "1.0.0",
   "main": "server.js",
   "dependencies": {
-    "express": "^4.18.2"
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "mongoose": "^8.16.3"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.10"
+  },
+  "scripts": {
+    "dev": "nodemon server.js"
   }
 }
