--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,23 +1,31 @@
-services:
-  backend:
-    build: ./backend
-    ports:
-      - "5000:5000"
-    volumes:
-      - ./backend:/app
-    environment:
-      - NODE_ENV=development
-    depends_on:
-      - mongo
+version: "3.9"
 
+services:
   frontend:
-    build: ./frontend
+    build:
+      context: ./frontend
+      dockerfile: Dockerfile.dev
     ports:
       - "3000:3000"
     volumes:
       - ./frontend:/app
+      - /app/node_modules/ # <- note the trailing slash
+    environment:
+      - CHOKIDAR_USEPOLLING=true
     depends_on:
       - backend
+
+  backend:
+    build:
+      context: ./backend
+      dockerfile: Dockerfile.dev
+    ports:
+      - "5000:5000"
+    volumes:
+      - ./backend:/app
+      - /app/node_modules
+    depends_on:
+      - mongo
 
   mongo:
     image: mongo:6
